evaluation/scalability/results/physical-20260807T094544Z/excluded_preflight_direct_chain.txt
-N ZTX-DIRECT-QUARANTINE
-A ZTX-DIRECT-QUARANTINE -s 10.244.0.253/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -d 10.244.0.253/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -s 10.244.0.11/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -d 10.244.0.11/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -s 10.244.0.10/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -d 10.244.0.10/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -s 10.244.0.13/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -d 10.244.0.13/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -s 10.244.0.12/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -d 10.244.0.12/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -s 10.244.0.14/32 -j DROP
-A ZTX-DIRECT-QUARANTINE -d 10.244.0.14/32 -j DROP
